html abgeaendert, head entfernt

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-		<title>Hallo Welt</title>
-        <meta />
-	</head>
-		
+	<body0>
+		dies ist ein test
+	</body0>	
 	<body>
 		Körper
         asd
