title geändert, head hinzugefuegt

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
 <html>
-	<body0>
-		dies ist ein test
-	</body0>	
+	<head>
+		<title>
+		die Sonne scheint
+		</title>	
+	</head>
 	<body>
 		Körper
-        asd
-
 	</body>
 
 </html>
